<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.indeves.chmplinapp.Activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <ImageView
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:layout_margin="30dp"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_margin="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/enterCodeSent"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/enterCode"/>
        <LinearLayout
            android:layout_marginBottom="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <EditText
                android:layout_marginLeft="5dp"
                android:background="@color/colorNum"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="50sp"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <EditText
                android:background="@color/colorNum"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textSize="50sp"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />





            <EditText
                android:background="@color/colorNum"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textSize="50sp"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />




            <EditText
                android:layout_marginRight="5dp"
                android:background="@color/colorNum"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:textSize="50sp"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>



        <Button
            android:textColor="@color/colorWhite"
            android:text="@string/signIN"
            android:id="@+id/LogIn_button_userSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button" />


        <Button
            android:textColor="@color/colorPrimary"
            android:id="@+id/LogIn_button_ProSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/signUp"
            android:background="@drawable/button_white" />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
