<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Content_homePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorProfile"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userProfile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userProfile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="@color/colorWhite"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/userProfile_gender_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male , 36 year"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />

            <RatingBar

                android:id="@+id/userProfile_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:numStars="5"
                android:stepSize="1"
                android:theme="@style/RatingBar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userProfile_num_photos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="360"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/photos"
                        android:textColor="@color/colorWhite"
                        android:textSize="11sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userProfile_num_events"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="34"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event"
                        android:textColor="@color/colorWhite"
                        android:textSize="11sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager

        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="#FFFF" />


</LinearLayout>